--- a/langs/bn.json
+++ b/langs/bn.json
@@ -7,7 +7,9 @@
         "Logs": "লগ",
         "Lookups": "লুকআপ",
         "Logout" : "লগ আউট",
-        "Welcome to Duty Hub — Preparing your workspace": "DutyHub এ স্বাগতম — আপনার ওয়ার্কস্পেস প্রস্তুত করা হচ্ছে"
+        "Welcome to Duty Hub — Preparing your workspace": "DutyHub এ স্বাগতম — আপনার ওয়ার্কস্পেস প্রস্তুত করা হচ্ছে",
+        "Logging out — Ending your session": "লগ আউট করা হচ্ছে — আপনার সেশন শেষ হচ্ছে"
+
     },
     "Dashboard":{},
     "SignInPage":{
