feat(i18n): add confirm password field and improve password input
- Add "Confirm Password" translation in both English and Bengali
- Remove redundant placeholder in login page password input
- Add required star indicator for password fields in registration
- Enhance PasswordInput component with translation support and placeholder handling

--- a/langs/bn.json
+++ b/langs/bn.json
@@ -16,6 +16,7 @@
         "Login failed": "লগইন ব্যর্থ হয়েছে।",
         "Username": "ইউজারনেম",
         "Password": "পাসওয়ার্ড",
+        "Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
         "Log In": "লগ ইন",
         "Logging In": "লগ ইন হচ্ছে",
         "Invalid username or password": "ইউজারনেম বা পাসওয়ার্ড সঠিক নয়।"
