--- a/langs/bn.json
+++ b/langs/bn.json
@@ -20,7 +20,24 @@
         "Log In": "লগ ইন",
         "Logging In": "লগ ইন হচ্ছে",
         "Invalid username or password": "ইউজারনেম বা পাসওয়ার্ড সঠিক নয়।"
-    }, 
+    },
+    "User":{
+        "Name": "নাম",
+        "Email": "ইমেইল",
+        "Username": "ইউজারনেম",
+        "BP No": "বিপি নম্বর",
+        "Password": "পাসওয়ার্ড",
+        "Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
+        "Phone 1": "ফোন ১",
+        "Phone 2": "ফোন ২",
+        "Blood Group": "রক্তের গ্রুপ",
+        "Current Status": "বর্তমান অবস্থা",
+        "Date of Birth": "জন্ম তারিখ",
+        "NID": "এনআইডি",
+        "Profile Picture": "প্রোফাইল ছবি",
+        "Roles": "ভূমিকা",
+        "Permissions": "অনুমতিসমূহ"
+    },
     "ErrorPages":{
         "The page you’re looking for doesn’t exist": "আপনি যে পৃষ্ঠাটি খুঁজছেন, তা পাওয়া যায়নি।",
         "You don’t have permission to view this page": "এই পাতায় প্রবেশের জন্য আপনার অনুমতি নেই।",
