refactor(auth): consolidate form inputs and validation logic
- Merge PasswordInput and FormInput into FormInputs component with multiple input types
- Replace checkEmailExists with generic checkValueExists for field uniqueness validation
- Add new UniqueInput component with real-time validation feedback
- Update language files with new validation messages
- Remove deprecated API route and components

--- a/langs/en.json
+++ b/langs/en.json
@@ -35,7 +35,9 @@
         "NID": "NID",
         "Profile Picture": "Profile Picture",
         "Roles": "Roles",
-        "Permissions": "Permissions"
+        "Permissions": "Permissions",
+        "Email already exists": "Email already exists.",
+        "Username already exists": "Username already exists."
     },
     "ErrorPages":{
         "The page you’re looking for doesn’t exist": "The page you’re looking for doesn’t exist.",
