--- a/langs/bn.json
+++ b/langs/bn.json
@@ -36,7 +36,9 @@
         "NID": "এনআইডি",
         "Profile Picture": "প্রোফাইল ছবি",
         "Roles": "ভূমিকা",
-        "Permissions": "অনুমতিসমূহ"
+        "Permissions": "অনুমতিসমূহ",
+        "Email already exists": "ইমেইল ইতিমধ্যে বিদ্যমান।",
+        "Username already exists": "ইউজারনেম ইতিমধ্যে বিদ্যমান।"
     },
     "ErrorPages":{
         "The page you’re looking for doesn’t exist": "আপনি যে পৃষ্ঠাটি খুঁজছেন, তা পাওয়া যায়নি।",
