feat(i18n): add BP No validation message and improve form layout
- Add "BP No already exists" translation in both English and Bengali
- Reorganize form fields in Register component for better grouping
- Add vertical spacing between form inputs for improved readability

--- a/langs/en.json
+++ b/langs/en.json
@@ -37,7 +37,8 @@
         "Roles": "Roles",
         "Permissions": "Permissions",
         "Email already exists": "Email already exists.",
-        "Username already exists": "Username already exists."
+        "Username already exists": "Username already exists.",
+        "BP No already exists": "BP No already exists."
     },
     "ErrorPages":{
         "The page you’re looking for doesn’t exist": "The page you’re looking for doesn’t exist.",
