--- a/langs/bn.json
+++ b/langs/bn.json
@@ -38,7 +38,8 @@
         "Roles": "ভূমিকা",
         "Permissions": "অনুমতিসমূহ",
         "Email already exists": "ইমেইল ইতিমধ্যে বিদ্যমান।",
-        "Username already exists": "ইউজারনেম ইতিমধ্যে বিদ্যমান।"
+        "Username already exists": "ইউজারনেম ইতিমধ্যে বিদ্যমান।",
+        "BP No already exists": "বিপি নম্বর ইতিমধ্যে বিদ্যমান।"
     },
     "ErrorPages":{
         "The page you’re looking for doesn’t exist": "আপনি যে পৃষ্ঠাটি খুঁজছেন, তা পাওয়া যায়নি।",
