feat(forms): add advanced select components and form utilities
- Implement CustomSelect component with search, multi-select, and API integration
- Add BasicSelect component for simple dropdown scenarios
- Create useSelect and useDebounce hooks for select functionality
- Introduce Popover, Command, and Dialog UI components to support selects
- Add blood group constants and translations
- Update PasswordInput to include model prop for translations
- Enhance existing Select component with cursor-pointer styling
- Add new dependencies: @radix-ui/react-popover and cmdk
```

This commit message:
1. Uses the "feat" type since these are new features
2. Specifies "forms" as the scope since most changes relate to form components
3. Briefly describes the main changes in the description
4. Lists the key changes in the body without being too verbose
5. Follows all the guidelines (imperative mood, lowercase, no period, etc.)

The message focuses on the most significant functional additions while grouping related changes together.

--- a/langs/bn.json
+++ b/langs/bn.json
@@ -8,7 +8,8 @@
         "Lookups": "লুকআপ",
         "Logout" : "লগ আউট",
         "Welcome to Duty Hub — Preparing your workspace": "DutyHub এ স্বাগতম — আপনার ওয়ার্কস্পেস প্রস্তুত করা হচ্ছে",
-        "Logging out — Ending your session": "লগ আউট করা হচ্ছে — আপনার সেশন শেষ হচ্ছে"
+        "Logging out — Ending your session": "লগ আউট করা হচ্ছে — আপনার সেশন শেষ হচ্ছে",
+        "Select Blood Group":"ব্লাড গ্রুপ সিলেক্ট করুন"
 
     },
     "Dashboard":{},
