feat(users): add role and permission selection to user registration form
- Add new API endpoint for fetching select options from database collections
- Extend useSelect hook to support dynamic option fetching with filters
- Update CustomSelect component to handle multiple selections and API integration
- Add role_ids and permission_ids fields to user registration schema
- Include new translations for select components
- Improve error handling in token utilities

--- a/langs/en.json
+++ b/langs/en.json
@@ -43,6 +43,12 @@
         "Select Current Status":"Select Current Status",
         "Search":"Search",
         "Loading":"Loading",
+        "Select option(s)":"Select option(s)",
+        "No options found":"No options found.",
+        "Select Roles":"Select Roles",
+        "Select Permissions":"Select Permissions",
+        "Register User":"Register User",
+        "Edit User":"Edit User",
         "None":"None"
     },
     "ErrorPages":{
