feat(admin): enhance user registration form with textarea components
- Add new Textarea UI component with styling
- Replace raw textareas with BasicTextarea component in registration form
- Add new translation keys for address and description fields
- Update form validation and API endpoint to handle new fields
- Improve image upload handling with consistent sizing

--- a/langs/en.json
+++ b/langs/en.json
@@ -49,6 +49,10 @@
         "Select Permissions":"Select Permissions",
         "Register User":"Register User",
         "Edit User":"Edit User",
+        "Description":"Description",
+        "Address":"Address",
+        "Enter a description":"Enter a description",
+        "Enter a address":"Enter a address",
         "None":"None"
     },
     "ErrorPages":{
