feat(user): make email optional and improve image handling
- Update user schema and types to make email optional
- Enhance useProfilePicture hook to handle both File and URL inputs
- Modify registration form to validate optional email
- Improve image upload handling in registration API
- Add new translation for invalid email error

--- a/langs/en.json
+++ b/langs/en.json
@@ -53,6 +53,7 @@
         "Address":"Address",
         "Enter a description":"Enter a description",
         "Enter a address":"Enter a address",
+        "Invalid email":"Invalid email",
         "None":"None"
     },
     "ErrorPages":{
