feat(admin): add name validation and improve user registration form
- Add "Name is required" validation message to en.json
- Remove redundant Toaster from admin layout since it's handled in Register component
- Enhance toast success styling in Register component
- Make password fields hidden by default for security
- Clean up unused reset handler comment

--- a/langs/en.json
+++ b/langs/en.json
@@ -54,6 +54,7 @@
         "Enter a description":"Enter a description",
         "Enter a address":"Enter a address",
         "Invalid email":"Invalid email",
+        "Name is required":"Name is required",
         "Phone Number is required and at least 11 Digits":"Phone Number is required and at least 11 Digits",
         "None":"None"
     },
