feat(users): add filter modal and improve table functionality
- Implement FilterModal component for reusable filter dialogs
- Add UserFilterForm for user-specific filtering
- Enhance TableHeaderActions with filter button and active state indicator
- Add "Phone" field to translations
- Clean up and refactor table column visibility management
- Improve table accessibility with better aria labels

--- a/langs/en.json
+++ b/langs/en.json
@@ -27,6 +27,7 @@
         "BP No": "BP No",
         "Password": "Password",
         "Confirm Password": "Confirm Password",
+        "Phone": "Phone",
         "Phone 1": "Phone 1",
         "Phone 2": "Phone 2",
         "Blood Group": "Blood Group",
