feat(users): add edit functionality with form validation and i18n
Implement user edit feature with comprehensive form validation, including unique field checks and image upload. Add support for multiple select fields and improve form input components. Update translations for new form fields and error messages.

The changes include:
- New useEditSheet hook for managing edit state
- Enhanced FormInputs components with better validation
- Complete edit form with all user fields
- API integration for updating user data
- Improved error handling and user feedback

--- a/langs/en.json
+++ b/langs/en.json
@@ -40,8 +40,13 @@
         "Email already exists": "Email already exists.",
         "Username already exists": "Username already exists.",
         "BP No already exists": "BP No already exists.",
+        "Email already in use": "Email already in use.",
+        "BP No must be unique": "BP No must be unique.",
         "Select Blood Group":"Select Blood Group",
         "Select Current Status":"Select Current Status",
+        "Select Status":"Select Status",
+        "Enter address":"Enter address",
+        "Enter description":"Enter description",
         "Search":"Search",
         "Loading":"Loading",
         "Select option(s)":"Select option(s)",
