feat(auth): implement client and server-side permission checks and refactor translations
- Add client-side permission check utility using localStorage
- Add server-side permission check utility with cookie and session validation
- Refactor translation usage to remove nested namespaces and simplify JSON structure
- Update components to use new permission check utilities
- Modify user list to conditionally show actions based on permissions
- Clean up API routes by centralizing auth checks

--- a/langs/en.json
+++ b/langs/en.json
@@ -1,73 +1,58 @@
 {
-    "Common":{
-        "Dashboard": "Dashboard",
-        "Users": "Users",
-        "Roles": "Roles",
-        "Permissions": "Permissions",
-        "Logs": "Logs",
-        "Lookups": "Lookups",
-        "Logout" : "Logout",
-        "Welcome to Duty Hub — Preparing your workspace": "Welcome to Duty Hub — Preparing your workspace",
-        "Logging out — Ending your session": "Logging out — Ending your session"
-    },
-    "Dashboard":{},
-    "SignInPage":{
-        "Login failed": "Login failed.",
-        "Username": "Username",
-        "Password": "Password",
-        "Confirm Password": "Confirm Password",
-        "Log In": "Log In",
-        "Logging In": "Logging In",
-        "Invalid username or password": "Invalid username or password."
-    }, 
-    "User":{
-        "Name": "Name",
-        "Email": "Email",
-        "Username": "Username",
-        "BP No": "BP No",
-        "Password": "Password",
-        "Confirm Password": "Confirm Password",
-        "Phone": "Phone",
-        "Phone 1": "Phone 1",
-        "Phone 2": "Phone 2",
-        "Blood Group": "Blood Group",
-        "Current Status": "Current Status",
-        "Date of Birth": "Date of Birth",
-        "NID": "NID",
-        "Profile Picture": "Profile Picture",
-        "Roles": "Roles",
-        "Permissions": "Permissions",
-        "Email already exists": "Email already exists.",
-        "Username already exists": "Username already exists.",
-        "BP No already exists": "BP No already exists.",
-        "Email already in use": "Email already in use.",
-        "BP No must be unique": "BP No must be unique.",
-        "Select Blood Group":"Select Blood Group",
-        "Select Current Status":"Select Current Status",
-        "Select Status":"Select Status",
-        "Enter address":"Enter address",
-        "Enter description":"Enter description",
-        "Search":"Search",
-        "Loading":"Loading",
-        "Select option(s)":"Select option(s)",
-        "No options found":"No options found.",
-        "Select Roles":"Select Roles",
-        "Select Permissions":"Select Permissions",
-        "Register User":"Register User",
-        "Edit User":"Edit User",
-        "Description":"Description",
-        "Address":"Address",
-        "Enter a description":"Enter a description",
-        "Enter a address":"Enter a address",
-        "Invalid email":"Invalid email",
-        "Name is required":"Name is required",
-        "Phone Number is required and at least 11 Digits":"Phone Number is required and at least 11 Digits",
-        "None":"None"
-    },
-    "ErrorPages":{
-        "The page you’re looking for doesn’t exist": "The page you’re looking for doesn’t exist.",
-        "You don’t have permission to view this page": "You don’t have permission to view this page.",
-        "Go Back": "Go Back"
-    },  
-    "Errors":{} 
+    "Dashboard": "Dashboard",
+    "Users": "Users",
+    "Logs": "Logs",
+    "Lookups": "Lookups",
+    "Logout" : "Logout",
+    "Welcome to Duty Hub — Preparing your workspace": "Welcome to Duty Hub — Preparing your workspace",
+    "Logging out — Ending your session": "Logging out — Ending your session",
+    "Login failed": "Login failed.",
+    "Log In": "Log In",
+    "Logging In": "Logging In",
+    "Invalid username or password": "Invalid username or password.",
+    "Name": "Name",
+    "Email": "Email",
+    "Username": "Username",
+    "BP No": "BP No",
+    "Password": "Password",
+    "Confirm Password": "Confirm Password",
+    "Phone": "Phone",
+    "Phone 1": "Phone 1",
+    "Phone 2": "Phone 2",
+    "Blood Group": "Blood Group",
+    "Current Status": "Current Status",
+    "Date of Birth": "Date of Birth",
+    "NID": "NID",
+    "Profile Picture": "Profile Picture",
+    "Roles": "Roles",
+    "Permissions": "Permissions",
+    "Email already exists": "Email already exists.",
+    "Username already exists": "Username already exists.",
+    "BP No already exists": "BP No already exists.",
+    "Email already in use": "Email already in use.",
+    "BP No must be unique": "BP No must be unique.",
+    "Select Blood Group":"Select Blood Group",
+    "Select Current Status":"Select Current Status",
+    "Select Status":"Select Status",
+    "Enter address":"Enter address",
+    "Enter description":"Enter description",
+    "Search":"Search",
+    "Loading":"Loading",
+    "Select option(s)":"Select option(s)",
+    "No options found":"No options found.",
+    "Select Roles":"Select Roles",
+    "Select Permissions":"Select Permissions",
+    "Register User":"Register User",
+    "Edit User":"Edit User",
+    "Description":"Description",
+    "Address":"Address",
+    "Enter a description":"Enter a description",
+    "Enter a address":"Enter a address",
+    "Invalid email":"Invalid email",
+    "Name is required":"Name is required",
+    "Phone Number is required and at least 11 Digits":"Phone Number is required and at least 11 Digits",
+    "None":"None",
+    "The page you’re looking for doesn’t exist": "The page you’re looking for doesn’t exist.",
+    "You don’t have permission to view this page": "You don’t have permission to view this page.",
+    "Go Back": "Go Back"
 }
