--- a/langs/bn.json
+++ b/langs/bn.json
@@ -1,53 +1,36 @@
 {
-    "Common":{
-        "Dashboard": "ড্যাশবোর্ড",
-        "Users": "ইউজার",
-        "Roles": "রোল",
-        "Permissions": "পারমিশন",
-        "Logs": "লগ",
-        "Lookups": "লুকআপ",
-        "Logout" : "লগ আউট",
-        "Welcome to Duty Hub — Preparing your workspace": "DutyHub এ স্বাগতম — আপনার ওয়ার্কস্পেস প্রস্তুত করা হচ্ছে",
-        "Logging out — Ending your session": "লগ আউট করা হচ্ছে — আপনার সেশন শেষ হচ্ছে",
-        "Select Blood Group":"ব্লাড গ্রুপ সিলেক্ট করুন"
-
-    },
-    "Dashboard":{},
-    "SignInPage":{
-        "Login failed": "লগইন ব্যর্থ হয়েছে।",
-        "Username": "ইউজারনেম",
-        "Password": "পাসওয়ার্ড",
-        "Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
-        "Log In": "লগ ইন",
-        "Logging In": "লগ ইন হচ্ছে",
-        "Invalid username or password": "ইউজারনেম বা পাসওয়ার্ড সঠিক নয়।"
-    },
-    "User":{
-        "Name": "নাম",
-        "Email": "ইমেইল",
-        "Username": "ইউজারনেম",
-        "BP No": "বিপি নম্বর",
-        "Password": "পাসওয়ার্ড",
-        "Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
-        "Phone 1": "ফোন ১",
-        "Phone 2": "ফোন ২",
-        "Blood Group": "রক্তের গ্রুপ",
-        "Current Status": "বর্তমান অবস্থা",
-        "Date of Birth": "জন্ম তারিখ",
-        "NID": "এনআইডি",
-        "Profile Picture": "প্রোফাইল ছবি",
-        "Roles": "ভূমিকা",
-        "Permissions": "অনুমতিসমূহ",
-        "Email already exists": "ইমেইল ইতিমধ্যে বিদ্যমান।",
-        "Username already exists": "ইউজারনেম ইতিমধ্যে বিদ্যমান।",
-        "BP No already exists": "বিপি নম্বর ইতিমধ্যে বিদ্যমান।"
-    },
-    "ErrorPages":{
-        "The page you’re looking for doesn’t exist": "আপনি যে পৃষ্ঠাটি খুঁজছেন, তা পাওয়া যায়নি।",
-        "You don’t have permission to view this page": "এই পাতায় প্রবেশের জন্য আপনার অনুমতি নেই।",
-        "Go Back": "আগের পেইজে যান"
-    }, 
-    "Errors":{
-    } 
+    "Dashboard": "ড্যাশবোর্ড",
+    "Users": "ইউজার",
+    "Roles": "রোল",
+    "Permissions": "পারমিশন",
+    "Logs": "লগ",
+    "Lookups": "লুকআপ",
+    "Logout" : "লগ আউট",
+    "Welcome to Duty Hub — Preparing your workspace": "DutyHub এ স্বাগতম — আপনার ওয়ার্কস্পেস প্রস্তুত করা হচ্ছে",
+    "Logging out — Ending your session": "লগ আউট করা হচ্ছে — আপনার সেশন শেষ হচ্ছে",
+    "Select Blood Group":"ব্লাড গ্রুপ সিলেক্ট করুন",
+    "Login failed": "লগইন ব্যর্থ হয়েছে।",
+    "Username": "ইউজারনেম",
+    "Password": "পাসওয়ার্ড",
+    "Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
+    "Log In": "লগ ইন",
+    "Logging In": "লগ ইন হচ্ছে",
+    "Invalid username or password": "ইউজারনেম বা পাসওয়ার্ড সঠিক নয়।",
+    "Name": "নাম",
+    "Email": "ইমেইল",
+    "BP No": "বিপি নম্বর",
+    "Phone 1": "ফোন ১",
+    "Phone 2": "ফোন ২",
+    "Blood Group": "রক্তের গ্রুপ",
+    "Current Status": "বর্তমান অবস্থা",
+    "Date of Birth": "জন্ম তারিখ",
+    "NID": "এনআইডি",
+    "Profile Picture": "প্রোফাইল ছবি",
+    "Email already exists": "ইমেইল ইতিমধ্যে বিদ্যমান।",
+    "Username already exists": "ইউজারনেম ইতিমধ্যে বিদ্যমান।",
+    "BP No already exists": "বিপি নম্বর ইতিমধ্যে বিদ্যমান।",
+    "The page you’re looking for doesn’t exist": "আপনি যে পৃষ্ঠাটি খুঁজছেন, তা পাওয়া যায়নি।",
+    "You don’t have permission to view this page": "এই পাতায় প্রবেশের জন্য আপনার অনুমতি নেই।",
+    "Go Back": "আগের পেইজে যান" 
 }
   
