feat(i18n): add translation support to components and hooks
Implement internationalization using next-intl by adding useTranslations hook across multiple components. Translate UI strings in Modal, FormHolderSheet, ConfirmDialog, FilterModal, User forms, Table components, and ColumnVisibilityManager. Also update English and Bengali language files with new translations.

The changes enable dynamic language switching and consistent translations throughout the application. All hardcoded strings have been replaced with translation keys, making the app ready for multilingual support.

--- a/langs/bn.json
+++ b/langs/bn.json
@@ -1,24 +1,22 @@
 {
     "Dashboard": "ড্যাশবোর্ড",
-    "Users": "ইউজার",
-    "Roles": "রোল",
-    "Permissions": "পারমিশন",
-    "Logs": "লগ",
-    "Lookups": "লুকআপ",
-    "Logout" : "লগ আউট",
-    "Welcome to Duty Hub — Preparing your workspace": "DutyHub এ স্বাগতম — আপনার ওয়ার্কস্পেস প্রস্তুত করা হচ্ছে",
-    "Logging out — Ending your session": "লগ আউট করা হচ্ছে — আপনার সেশন শেষ হচ্ছে",
-    "Select Blood Group":"ব্লাড গ্রুপ সিলেক্ট করুন",
+    "Users": "ইউজারস",
+    "Logs": "লগস",
+    "Lookups": "লুকআপস",
+    "Logout": "লগআউট",
+    "Welcome to Duty Hub — Preparing your workspace": "ডিউটি হাব-এ স্বাগতম — আপনার ওয়ার্কস্পেস প্রস্তুত করা হচ্ছে",
+    "Logging out — Ending your session": "লগআউট হচ্ছে — আপনার সেশন শেষ করা হচ্ছে",
     "Login failed": "লগইন ব্যর্থ হয়েছে।",
-    "Username": "ইউজারনেম",
-    "Password": "পাসওয়ার্ড",
-    "Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
-    "Log In": "লগ ইন",
-    "Logging In": "লগ ইন হচ্ছে",
-    "Invalid username or password": "ইউজারনেম বা পাসওয়ার্ড সঠিক নয়।",
+    "Log In": "লগইন",
+    "Logging In": "লগইন হচ্ছে",
+    "Invalid username or password": "অবৈধ ইউজারনেম বা পাসওয়ার্ড।",
     "Name": "নাম",
     "Email": "ইমেইল",
-    "BP No": "বিপি নম্বর",
+    "Username": "ইউজারনেম",
+    "BP No": "বিপি নং",
+    "Password": "পাসওয়ার্ড",
+    "Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
+    "Phone": "ফোন",
     "Phone 1": "ফোন ১",
     "Phone 2": "ফোন ২",
     "Blood Group": "রক্তের গ্রুপ",
@@ -26,11 +24,158 @@
     "Date of Birth": "জন্ম তারিখ",
     "NID": "এনআইডি",
     "Profile Picture": "প্রোফাইল ছবি",
-    "Email already exists": "ইমেইল ইতিমধ্যে বিদ্যমান।",
-    "Username already exists": "ইউজারনেম ইতিমধ্যে বিদ্যমান।",
-    "BP No already exists": "বিপি নম্বর ইতিমধ্যে বিদ্যমান।",
-    "The page you’re looking for doesn’t exist": "আপনি যে পৃষ্ঠাটি খুঁজছেন, তা পাওয়া যায়নি।",
-    "You don’t have permission to view this page": "এই পাতায় প্রবেশের জন্য আপনার অনুমতি নেই।",
-    "Go Back": "আগের পেইজে যান" 
-}
+    "Roles": "রোলস",
+    "Permissions": "পারমিশনস",
+    "Email already exists": "ইমেইল ইতোমধ্যেই রয়েছে।",
+    "Username already exists": "ইউজারনেম ইতোমধ্যেই রয়েছে",
+    "BP No already exists": "বিপি নং ইতোমধ্যেই রয়েছে",
+    "Email already in use": "ইমেইল ইতোমধ্যেই ব্যবহৃত হচ্ছে।",
+    "BP No must be unique": "বিপি নং অবশ্যই ইউনিক হতে হবে।",
+    "Select Blood Group": "রক্তের গ্রুপ নির্বাচন করুন",
+    "Select Current Status": "বর্তমান অবস্থা নির্বাচন করুন",
+    "Select Status": "অবস্থা নির্বাচন করুন",
+    "Enter address": "ঠিকানা লিখুন",
+    "Enter description": "বর্ণনা লিখুন",
+    "Search": "সার্চ",
+    "Loading": "লোড হচ্ছে",
+    "Select option(s)": "অপশন(গুলি) নির্বাচন করুন",
+    "No options found": "কোন অপশন পাওয়া যায়নি।",
+    "Select Roles": "রোলস নির্বাচন করুন",
+    "Select Permissions": "পারমিশনস নির্বাচন করুন",
+    "Register User": "ইউজার রেজিস্টার করুন",
+    "Edit User": "ইউজার এডিট করুন",
+    "Description": "বর্ণনা",
+    "Address": "ঠিকানা",
+    "Enter a description": "একটি বর্ণনা লিখুন",
+    "Enter a address": "একটি ঠিকানা লিখুন",
+    "Invalid email": "অবৈধ ইমেইল",
+    "Name is required": "নাম আবশ্যক",
+    "Phone Number is required and at least 11 Digits": "ফোন নম্বর আবশ্যক এবং কমপক্ষে ১১ অঙ্কের হতে হবে",
+    "None": "কোনোটাই নয়",
+    "The page you’re looking for doesn’t exist": "আপনি যে পেজটি খুঁজছেন তা নেই।",
+    "You don’t have permission to view this page": "আপনার এই পেজ দেখার অনুমতি নেই।",
+    "Go Back": "ফিরে যান",
+    "Column Settings": "কলাম সেটিংস",
+    "Display": "ডিসপ্লে",
+    "Move Up": "উপর সরান",
+    "Move Down": "নিচে সরান",
+    "Move to Top": "শীর্ষে সরান",
+    "Move to Bottom": "নীচে সরান",
+    "Move to Do not Display": "ডিসপ্লে না করার জন্য সরান",
+    "Move to Display": "ডিসপ্লের জন্য সরান",
+    "Hide All": "সব লুকান",
+    "Show All": "সব দেখান",
+    "Do Not Display": "ডিসপ্লে করবেন না",
+    "Filter columns": "কলাম ফিল্টার করুন",
+    "Save": "সেভ",
+    "Refresh": "রিফ্রেশ",
+    "Reset": "রিসেট",
+    "Close": "বন্ধ করুন",
+    "Column settings refreshed from database": "ডাটাবেজ থেকে কলাম সেটিংস রিফ্রেশ হয়েছে",
+    "Failed to refresh column settings from database": "ডাটাবেজ থেকে কলাম সেটিংস রিফ্রেশ করতে ব্যর্থ হয়েছে",
+    "Confirm": "কনফার্ম",
+    "Are you sure?": "আপনি কি নিশ্চিত?",
+    "Yes": "হ্যাঁ",
+    "Cancel": "ক্যানসেল",
+    "Apply Filters": "ফিল্টার প্রয়োগ করুন",
+    "Detail": "ডিটেইল",
+    "Edit": "এডিট",
+    "Delete": "ডিলিট",
+    "Showing": "দেখাচ্ছে",
+    "to": "থেকে",
+    "Total": "মোট",
+    "Add New": "নতুন যোগ করুন",
+    "Filter": "ফিল্টার",
+    "Columns": "কলামস",
+    "Print": "প্রিন্ট",
+    "Excel": "এক্সেল",
+    "Rows per page": "প্রতি পেজ সারি",
+    "Previous": "আগের",
+    "Next": "পরের",
+    "Active": "অ্যাকটিভ",
+    "Inactive": "ইনঅ্যাকটিভ",
+    "Update User": "ইউজার আপডেট করুন",
+    "Saving": "সেভ হচ্ছে",
+    "Username is required": "ইউজারনেম আবশ্যক",
+    "Phone Number must be at least 11 digits": "ফোন নম্বর কমপক্ষে ১১ অঙ্কের হতে হবে",
+    "Status is required": "স্ট্যাটাস আবশ্যক",
+    "Select at least one role": "কমপক্ষে একটি রোল নির্বাচন করুন",
+    "Invalid user ID": "অবৈধ ইউজার আইডি",
+    "Invalid role ID": "অবৈধ রোল আইডি",
+    "Invalid permission ID": "অবৈধ পারমিশন আইডি",
+    "Only image files are allowed": "শুধুমাত্র ইমেজ ফাইল অনুমোদিত",
+    "User updated successfully!": "ইউজার সফলভাবে আপডেট হয়েছে!",
+    "Update failed": "আপডেট ব্যর্থ হয়েছে",
+    "Something went wrong": "কিছু একটা ভুল হয়েছে",
+    "use client": "use client",
+    "SL": "ক্রঃনং",
+    "Action": "অ্যাকশন",
+    "Decrypted Password": "ডিক্রিপ্ট করা পাসওয়ার্ড",
+    "Age": "বয়স",
+    "Created At": "তৈরি হয়েছে",
+    "Updated At": "আপডেট হয়েছে",
+    "Register New User": "নতুন ইউজার রেজিস্টার করুন",
+    "User Table": "ইউজার টেবিল",
+    "Filter Users": "ইউজার ফিল্টার করুন",
+    "Confirm Deletion": "ডিলিশন কনফার্ম করুন",
+    "Are you sure you want to delete this user": "আপনি কি নিশ্চিত যে এই ইউজারকে ডিলিট করবেন?",
+    "Deleting": "ডিলিট হচ্ছে",
+    "permissions": "পারমিশনস",
+    "Password must be at least 6 characters": "পাসওয়ার্ড কমপক্ষে ৬ অক্ষরের হতে হবে",
+    "Confirmed password is required": "নিশ্চিত পাসওয়ার্ড আবশ্যক",
+    "Passwords don't match": "পাসওয়ার্ড মেলেনি",
+    "Registration failed": "রেজিস্ট্রেশন ব্যর্থ হয়েছে",
+    "User registered successfully!": "ইউজার সফলভাবে রেজিস্টার হয়েছে!",
+    "Select your date of birth": "আপনার জন্ম তারিখ নির্বাচন করুন",
+    "Reset Form": "ফর্ম রিসেট করুন",
+    "Registering": "রেজিস্টার হচ্ছে",
+    "Role(s)": "রোল(গুলি)",
+    "Role Permissions": "রোল পারমিশনস",
+    "Direct Permission(s)": "ডাইরেক্ট পারমিশনস",
+    "Status": "স্ট্যাটাস",
+    "All": "সব",
+    "authorization": "অথরাইজেশন",
+    "Unauthorized": "অননুমোদিত",
+    "Invalid token payload": "অবৈধ টোকেন পে-লোড",
+    "error": "এরর",
+    "id": "আইডি",
+    "collection": "কলেকশন",
+    "fieldName": "ফিল্ড নাম",
+    "fieldValue": "ফিল্ড ভ্যালু",
+    "exceptFieldName": "ব্যতীত ফিল্ড নাম",
+    "exceptFieldValue": "ব্যতীত ফিল্ড ভ্যালু",
+    "Missing required parameters: collection, fieldName, or fieldValue": "প্রয়োজনীয় প্যারামিটার অনুপস্থিত: কলেকশন, ফিল্ড নাম, অথবা ফিল্ড ভ্যালু",
+    "Invalid collection": "অবৈধ কলেকশন",
+    "_id": "_আইডি",
+    "exists": "অস্তিত্ব আছে",
+    "Check-unique error:": "চেক-ইউনিক এরর:",
+    "Invalid or expired token": "অবৈধ বা মেয়াদোত্তীর্ণ টোকেন",
+    "User": "ইউজার",
+    "Logged out": "লগআউট হয়েছে",
+    "Logout error": "লগআউট এরর",
+    "Internal Server Error": "ইন্টারনাল সার্ভার এরর",
+    "Invalid token": "অবৈধ টোকেন",
+    "Missing tableId or userId": "টেবিল আইডি বা ইউজার আইডি অনুপস্থিত",
+    "Server error or invalid token": "সার্ভার এরর বা অবৈধ টোকেন",
+    "Missing or invalid data": "ডেটা অনুপস্থিত বা অবৈধ",
+    "Invalid userId": "অবৈধ ইউজার আইডি",
+    "Updated column combination for table:": "টেবিলের জন্য কলাম কম্বিনেশন আপডেট হয়েছে:",
+    "Created new column combination for table:": "টেবিলের জন্য নতুন কলাম কম্বিনেশন তৈরি হয়েছে:",
+    "Invalid value passed to extractId": "extractId-এ অবৈধ মান পাঠানো হয়েছে",
+    "Invalid token or server error": "অবৈধ টোকেন বা সার্ভার এরর",
+    "Phone number is required": "ফোন নম্বর আবশ্যক",
+    "Passwords do not match": "পাসওয়ার্ড মিলছে না",
+    "Email or username already exists": "ইমেইল বা ইউজারনেম ইতোমধ্যেই রয়েছে",
+    "User created: ": "ইউজার তৈরি হয়েছে: ",
+    "User Registration Error": "ইউজার রেজিস্ট্রেশন এরর",
+    "User not found": "ইউজার পাওয়া যায়নি",
+    "User updated": "ইউজার আপডেট হয়েছে",
+    "User updated successfully": "ইউজার সফলভাবে আপডেট হয়েছে",
+    "User deleted": "ইউজার ডিলিট হয়েছে",
+    "Cannot delete user due to existing reference": "বিদ্যমান রেফারেন্সের কারণে ইউজার ডিলিট করা যাবে না",
+    "User deleted successfully": "ইউজার সফলভাবে ডিলিট হয়েছে",
+    "Delete failed": "ডিলিট ব্যর্থ হয়েছে",
+    "Drag & drop or click to select an image": "ছবি নির্বাচনের জন্য ড্র্যাগ ও ড্রপ করুন বা ক্লিক করুন",
+    "Remove Image": "ছবি মুছুন"
+  }
   
