feat(i18n): add user details translation and support in modal
- Added "User Details" translation in both English and Bengali
- Modified Modal component to use translated titles via the t() function

--- a/langs/bn.json
+++ b/langs/bn.json
@@ -176,6 +176,7 @@
     "User deleted successfully": "ইউজার সফলভাবে ডিলিট হয়েছে",
     "Delete failed": "ডিলিট ব্যর্থ হয়েছে",
     "Drag & drop or click to select an image": "ছবি নির্বাচনের জন্য ড্র্যাগ ও ড্রপ করুন বা ক্লিক করুন",
-    "Remove Image": "ছবি মুছুন"
+    "Remove Image": "ছবি মুছুন",
+    "User Details": "ইউজার বিস্তারিত"
   }
   
