--- a/langs/en.json
+++ b/langs/en.json
@@ -176,6 +176,7 @@
     "User deleted successfully": "User deleted successfully",
     "Delete failed": "Delete failed",
     "Drag & drop or click to select an image": "Drag & drop or click to select an image",
-    "Remove Image": "Remove Image"
+    "Remove Image": "Remove Image",
+    "User Details": "User Details"
   }
   
