feat(roles): implement role management system
- Add role list, detail, create, edit and delete functionality
- Implement role permissions assignment and validation
- Add role filtering and export capabilities
- Include multi-language support for role management
- Add server-side role API endpoints
- Implement client-side role components and forms
- Add guard name constants and validation
- Update user deletion reference checks to include roles
- Extend check-unique endpoint to support role validation
- Add role-related translations in en and bn locales

--- a/langs/bn.json
+++ b/langs/bn.json
@@ -177,6 +177,15 @@
     "Delete failed": "ডিলিট ব্যর্থ হয়েছে",
     "Drag & drop or click to select an image": "ছবি নির্বাচনের জন্য ড্র্যাগ ও ড্রপ করুন বা ক্লিক করুন",
     "Remove Image": "ছবি মুছুন",
+    "Created By": "তৈরি করেছেন",
+    "Guard Name": "গার্ড নাম",
+    "Updated By": "আপডেট করেছেন",
+    "Add Role": "রোল যুক্ত করুন",
+    "Add New Role": "নতুন রোল যোগ করুন",
+    "Select Guard Name": "গার্ড নাম নির্বাচন করুন",
+    "Update Role": "রোল আপডেট করুন",
+    "Are you sure you want to delete": "আপনি কি নিশ্চিত যে আপনি মুছে ফেলতে চান",
+    "Edit Role": "রোল সম্পাদনা করুন",
     "User Details": "ইউজার বিস্তারিত"
   }
   
