feat(i18n): add and update translation strings for role and user management
- Add new translation strings for role management in both English and Bengali
- Update toast messages to use translation strings in role and user management components
- Remove redundant useTranslations call in Roles/Add component

--- a/langs/en.json
+++ b/langs/en.json
@@ -186,6 +186,9 @@
     "Select Guard Name": "Select Guard Name",
     "Update Role": "Update Role",
     "Are you sure you want to delete": "Are you sure you want to delete",
+    "Adding": "Adding",
+    "Role added successfully!": "Role added successfully!",
+    "Role edited successfully!": "Role edited successfully!",
     "Edit Role": "Edit Role"
   }
   
