docs(langs): update success message for role editing
Change "Role edited successfully!" to "Role updated successfully!" to maintain consistency with similar success messages in the codebase.

--- a/langs/bn.json
+++ b/langs/bn.json
@@ -182,7 +182,7 @@
     "Adding": "যুক্ত করা হচ্ছে",
     "Updated By": "আপডেট করেছেন",
     "Role added successfully!": "রোল সফলভাবে যোগ হয়েছে!",
-    "Role edited successfully!": "রোল সফলভাবে সম্পাদিত হয়েছে!",
+    "Role updated successfully!": "রোল সফলভাবে সম্পাদিত হয়েছে!",
     "Add Role": "রোল যুক্ত করুন",
     "Add New Role": "নতুন রোল যোগ করুন",
     "Select Guard Name": "গার্ড নাম নির্বাচন করুন",
