--- a/langs/en.json
+++ b/langs/en.json
@@ -188,7 +188,7 @@
     "Are you sure you want to delete": "Are you sure you want to delete",
     "Adding": "Adding",
     "Role added successfully!": "Role added successfully!",
-    "Role edited successfully!": "Role edited successfully!",
+    "Role updated successfully!": "Role updated successfully!",
     "Edit Role": "Edit Role"
   }
   
